website-mockups/subscription-flow/main/less/styles.less
/* ... */
[data-page="0"], [data-page="1"], [data-page="2"], [data-page="4"], .desktop[data-page="6"] {
    #subscriptionFlow #back {
        background-image: url("../images/back-lighter.png");
    }
}
body:not([data-page="0"]):not([data-page="1"])  {
    #learnEarn {
        pointer-events: none;
    }
}
.desktop:not(.squashed)[data-page="3"] {
    #subscriptionFlow #back {
        background-image: url("../images/back-lighter.png");
    }
}

.plan {
    border: 2px solid #CBD1E0;
    border-radius: 15px;
    padding: 10px;
    box-sizing: border-box;
    transition: border 250ms ease-in-out;
    position: relative;
    margin-top: 15px;
    max-width: 300px;
    transition: background 500ms ease-in-out, border 500ms ease-in-out;
    .info {
        line-height: 1.5;
        position: relative;
        p {
            margin: 0;
            text-align: left !important;
            font-size: 14px;
        }
    }
    div.icon {
        position: absolute;
        top: 0;
        right: 0;
        background-position: center;
        background-repeat: no-repeat;
        top: 50%;
        transform: scale(.8) translateY(-50%);
        transform-origin: top right;
        right: 0px;
        &::before {
            content: "";
            width: 100%;
            height: 100%;
            position: absolute;
            bottom:0;
            right:0;
            background-position: bottom;
            background-repeat: no-repeat;
        }
        &::after {
            content: "";
            width: 100%;
            height: 0;
            transition: height 1s ease-in-out;
            position: absolute;
            bottom:0;
            right:0;
            background-position: bottom;
            background-repeat: no-repeat;
        }
    }
    &#plus div.icon {
        width: 53px;
        height: 53px;
        &::before {
            background-size: 53px 53px;
            background-image: url("../images/tier-plus.png");
        }
        &::after {
            background-size: 53px 53px;
            background-image: url("../images/tier-plus-active.png");
        }
    }
    &#pro div.icon {
        width: 53px; //36px;
        height: 62px;
        &::before {
            background-size: 36px 62px;
            background-image: url("../images/tier-pro.png");
        }
        &::after {
            background-size: 36px 62px;
            background-image: url("../images/tier-pro-active.png");
        }
    }
    &#drops div.icon {
        width: 53px; //40px;
        height: 55px;
        &::before {
            background-size: 40px 55px;
            background-image: url("../images/tier-drops.png");
        }
        &::after {
            background-size: 40px 55px;
            background-image: url("../images/tier-drops-active.png");
        }
    }
    &.selected {
        border-color: #3B00B9;
        background-color: white;
        &#plus {
            .more-info > ul {
                border-top-color: #FFEA00;
            }
            div.icon::after {
                height: 100%;
            }
        }
        &#pro {
            .more-info > ul {
                border-top-color: #F754D9;
            }
            div.icon::after {
                height: 100%;
            }
        }
        &#drops {
            .more-info > ul {
                border-top-color: #44FEC1;
            }
            div.icon::after {
                height: 100%;
            }
        }
    }
    &.recommended {
        &:after {
            content: "recommended";
            font-size: 11px;
            background-color: #3B00B9;
            color: white;
            font-weight: normal;
            padding: 3px 12px;
            border-radius: 5px;
            text-transform: uppercase;
            position: absolute;
            top: 0;
            left: 50%;
            transform: translate(-50%, -50%);
            z-index: 4;
        }
    }
    .more-info {
        overflow: hidden;
        transition: height 250ms ease-in-out;
    }
    ul {
        font-size: 80%;
        border-top: 2px solid #CBD1E0;
        margin-top: 10px !important;
        padding-top: 10px !important;
        li+li {
            margin-top: 10px !important;
        }
    }
}
/* ... */

